# rust_on_aws

./: Cargo.toml  rust_lambda_helpers.zsh
src/: main.rs
