[package]
name = "rust_on_aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "^3.0"
aws-sdk-dynamodb = "^0.3"
tokio = { version = "1", features = ["full"] }
lambda_runtime = "^4.0"
serde_json = "1"
serde_json = "1"
log = "^4.0"
simpler_logger = "v1"
uuid = { version = "^0.8", features = ["v4"] }
